# lywsd03mmc_remote_display

./: .gitignore  README.md
ATC_Thermometer/: app.c  app_config.h  battery.c  ble.c  cmd_parser.c  flash.c  flash.h  i2c.c  lcd.c  main.c  makefile  project.mk  sensor.c
nrf52_bridge/ble_app/: ble_app.code-workspace  ble_env_c.c  ble_env_c.h  main.c  main.h
nrf52_bridge/ble_app/pca10100/s122/armgcc/: Makefile  ble_app_gcc_nrf52.ld
nrf52_bridge/ble_app/pca10100/s122/config/: sdk_config.h
nrf52_bridge/sdk/components/libraries/util/: app_error.h
rust_host_com/: Cargo.toml
rust_host_com/src/: main.rs
