[package]
name = "rust_host_com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.3"
tokio = { version = "1.21.1", features = ["rt", "sync"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
mini-redis = "0.4"
regex = "1.7.0"